--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-            <!--android:configChanges="orientation|keyboardHidden|screenSize">-->
+        <!--<activity android:name=".HostFragmentsActivity"></activity>-->
+        <activity android:name=".HostFragmentsActivity">
+
+            <!-- android:configChanges="orientation|keyboardHidden|screenSize"> -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HintActivity"></activity>
-        <activity android:name=".ResultActivity"></activity>
+        <activity android:name=".HintActivity" />
+        <activity android:name=".ResultActivity" />
     </application>
 
 </manifest>
