--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <!--<activity android:name=".HostFragmentsActivity"></activity>-->
-        <activity android:name=".HostFragmentsActivity">
+        <activity android:name=".MainActivity">
 
             <!-- android:configChanges="orientation|keyboardHidden|screenSize"> -->
             <intent-filter>
