--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <!--<activity android:name=".HostFragmentsActivity"></activity>-->
-        <activity android:name=".MainActivity">
+        <activity android:name=".ExamActivity">
 
             <!-- android:configChanges="orientation|keyboardHidden|screenSize"> -->
             <intent-filter>
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".HintActivity" />
         <activity android:name=".ResultActivity" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
